--- a/src/app/patientlist/patientlist.component.css
+++ b/src/app/patientlist/patientlist.component.css
@@ -281,4 +281,5 @@ a{
 
 mat-paginator{
   font-size: 16px;
+  padding-bottom: 5%;
 }
